--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "detect-engine",
-  "description": "Detect the node.js engine you're running on",
+  "description": "Detect whether you're running on node.js or io.js",
   "version": "1.0.1",
   "author": "silverwind <me@silverwind.io>",
   "homepage": "https://github.com/silverwind/detect-engine",
